--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "cd client && gulp one"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
@@ -18,6 +18,7 @@
     "jquery": "^2.1.4",
     "morgan": "~1.5.1",
     "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "serve-favicon": "~2.2.0",
     "watchify": "^3.2.2"
